add lab devicenet with prometeus and grafana
